--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.3.0",
     "react-spring": "^9.5.2",
     "socket.io-client": "^4.5.2",
+    "uuid": "^9.0.0",
     "zustand": "^4.1.1"
   },
   "devDependencies": {
